Add register page and style

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,13 @@
             </div>
         </div>
     </nav>
-
+    <p class="text-end m-3">
+        {% if user.is_authenticated %}
+        <p class="text-end m-3">You are logged in as {{ user }}</p>
+        {% else %}
+        <p class="text-end m-3">You are not logged in</p>
+        {% endif %}
+    </p>
     <main class="flex-shrink-0 main-bg">
 
         {% block content %}
