add dockstrings, validate code

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,7 +13,13 @@
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
+                {% if "placeholder" in post.featured_image.url %}
+                <img class="scale" src="{% static 'images/default.jpg' %}"
+                                alt="placeholder image">
+            {% else %}
+                <img class="scale" src=" {{ post.featured_image.url }}"
+                                alt="{{ post.title }}">
+            {% endif %}
             </div>
         </div>
     </div>
@@ -26,9 +32,9 @@
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
                 <h2>{{ coder }}</h2>
-                <p class="card-text">
+                <article class="card-text">
                     {{ post.content | safe }}
-                </p>
+                </article>
             </div>
         </div>
     </div>
@@ -70,9 +76,9 @@
           {% endif %}
           {% if user.is_authenticated and comment.author == user %}
           <button class="btn btn-delete"
-                comment_id="{{ comment.id }}">Delete</button>
+                data-comment_id="{{ comment.id }}">Delete</button>
             <button class="btn btn-edit"
-                comment_id="{{ comment.id }}">Edit</button>
+                data-comment_id="{{ comment.id }}">Edit</button>
           {% endif %}
         </div>
         <!-- Our for loop ends here -->
