--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -31,8 +31,7 @@
                             </a>
 
                             <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}}
-                            </p>
+                            <p class="card-text text-muted h6">{{ post.created_on}}</p>
                         </div>
                     </div>
                 </div>
